1. Fixed separations on ChatSearcher component. 2. Fixed ChatArchiver separator. Wrapped it into a div and made sure it didn't overflow or fall too short. 3. Make profile pic column container fit to the content

--- a/src/ChatArchiver/ChatArchiver.css
+++ b/src/ChatArchiver/ChatArchiver.css
@@ -4,19 +4,11 @@
     height: 40px;
     margin-top: 12px;
     margin-bottom: 5px;
-    margin-left: 20px;
-}
-
-.archiver-container span {
-    position: absolute;
-    left: 60px;
-    color: #e9edef;
-    font-size: 1.8rem;
+    cursor: pointer;
 }
 
 .archiver-container button {
-    position: absolute;
-    left: 10px;
+    margin: 0 22px;
     width: 20px;
     height: 20px;
     background-image: url("../../assets/icons/archiver.png");
@@ -25,12 +17,46 @@
     background-size: contain;
 }
 
+.archiver-container span {
+    margin-left: 5px;
+    color: #e9edef;
+    font-size: 1.8rem;
+}
+
+
+.archiver-container .separator-container {
+    box-sizing: border-box;
+    margin-top: 10px;
+    width: 100%;
+    padding-left: 69px;
+    padding-right: 10px;
+}
+
 .archiver-container .separator {
-    position: absolute;
-    left: 50px;
-    bottom: 0;
-    width: 81%;
+    width: 100%;
     height: 1px;
     border: none;
     background-color: #202b32;
 }
+
+
+
+/*
+@media (max-width: 768px) {
+    .archiver-container .separator {
+        width: 81%;
+    }
+}
+
+@media (min-width: 769px) and (max-width: 940px) {
+    .archiver-container .separator {
+        width: 79%;
+    }
+
+}
+
+@media (min-width: 941px) {
+    .archiver-container .separator {
+        width: 85%;
+    }
+}*/
