--- a/src/ChatItem/ChatItem.css
+++ b/src/ChatItem/ChatItem.css
@@ -10,7 +10,7 @@
     width: 100%;
     height: 100%;
     margin-top: 8px;
-    grid-template-columns: 1fr 3fr 3fr;
+    grid-template-columns: fit-content(50px) 3fr 3fr;
     grid-template-rows: 1fr 3fr;
     grid-template-areas:
         "profilePic personName messageTime"
@@ -19,6 +19,7 @@
 }
 
 .profile-picture {
+    grid-area: profilePic;
     width: 50px;
     height: 50px;
     margin-right: 10px;
@@ -31,6 +32,7 @@
 
 .person-name {
     grid-area: personName;
+    align-self: end;
     font-size: 1.7rem;
     font-weight: 500;
     margin: 0;
@@ -38,21 +40,25 @@
 
 .person-message {
     grid-area: messageContent;
+    margin-top: 5px;
+    align-self: start;
     font-size: 1.3rem;
     font-weight: 300;
 }
 
-.person-name-time {
+.person-message-time {
     grid-area: messageTime;
     font-size: 1.3rem;
     font-weight: 300;
     justify-self: end;
+    align-self: end;
+    margin-right: 20px;
 }
 
 .chat-item .separator {
     position: absolute;
     right: 0;
-    width: 86%;
+    width: 82%;
     height: 1px;
     border: none;
     background-color: #202b32;
