--- a/src/ChatList/ChatList.css
+++ b/src/ChatList/ChatList.css
@@ -1,6 +1,6 @@
 .chatList {
     margin-top: 0;
     list-style: none;
-    margin-left: 20px;
+    margin: 0 10px;
     padding: 0;
 }
