--- a/src/ChatSearcher/ChatSearcher.css
+++ b/src/ChatSearcher/ChatSearcher.css
@@ -33,12 +33,16 @@ button {
 
 .searcher-container-input input{
     width: 100%;
-    margin-left: 30px;
+    margin-left: 20px;
     background-color: transparent;
     border: none;
     outline: none;
-    color: whitesmoke;
+    color: #e9edef;
     font-size: 1.35rem;
+}
+
+.searcher-container-input input::placeholder{
+    color: #b6b8af;
 }
 
 .searcher-container > button{
